yaml-kubernetes/ingress/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-detection-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "150m"
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 5000
          - path: /videos
            pathType: Prefix
            backend:
              service:
                name: video-service
                port:
                  number: 5001
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: analytics
                port:
                  number: 5002
          - path: /frame
            pathType: Prefix
            backend:
              service:
                name: frame-services
                port:
                  number: 5003
